# treebeard

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  RELEASE.md  USE_CASES.md  release.sh
.config/: nextest.toml
.github/workflows/: release.yml
src/: cleanup.rs  config.rs  error.rs  git.rs  hooks.rs  lib.rs  main.rs  sandbox.rs  shell.rs  watcher.rs
src/cli/: args.rs  mod.rs  validation.rs
src/commands/: cleanup.rs  config.rs  doctor.rs  list.rs  mod.rs  path.rs
src/config/: mod.rs  paths.rs  persistence.rs  schema.rs
src/overlay/: convert.rs  file_handle.rs  helpers.rs  inode_manager.rs  mod.rs  mount.rs  path_resolver.rs  setup.rs  types.rs  whiteout.rs
src/session/: lifecycle.rs  (+3 more)
tests/: TESTING.md  common.rs  config_defaults_tests.rs  config_paths_tests.rs  config_patterns_tests.rs  config_persistence_tests.rs  config_project_config_tests.rs  e2e.rs  e2e_branch_tests.rs  e2e_cleanup_tests.rs  e2e_config_cmd_tests.rs  e2e_doctor_tests.rs  e2e_edge_cases_tests.rs  e2e_error_tests.rs  e2e_file_ops_tests.rs  e2e_fuse_overlay_tests.rs  e2e_git_check_ignore_tests.rs  e2e_helpers.rs  e2e_maintenance_tests.rs  e2e_path_cmd_tests.rs  e2e_session_tests.rs  e2e_subcommand_tests.rs  e2e_tests.proptest-regressions  e2e_tests.rs  e2e_tty_tests.rs  e2e_workflow_tests.rs  fuse_common.rs  fuse_cow_tests.rs  fuse_inode_tests.rs  fuse_lookup_tests.rs  fuse_mount_tests.rs  fuse_passthrough_tests.rs  fuse_real_tests.rs  fuse_whiteouts_tests.rs  git_branch_tests.rs  git_repo_tests.rs  git_squash_tests.rs  git_stash_tests.rs  git_worktree_tests.rs  hooks_tests.rs  (+4 more)
(+58 files in other folders)
