[package]
name = "treebeard"
version = "0.2.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
directories = "5.0"

# Git (pure Rust)
gix = { version = "0.68", features = ["blocking-network-client"] }

# FUSE filesystem (cross-platform: Linux native, macOS via macFUSE)
# Note: Requires macFUSE on macOS: brew install --cask macfuse
fuser = { version = "0.16", features = ["libfuse"] }
libc = "0.2"

# File watching
notify = "7.0"
notify-debouncer-full = "0.4"

# Async runtime
tokio = { version = "1", features = ["full", "signal"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
glob = "0.3"
regex = "1.11"
xattr = "1.3"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5.0"
nix = { version = "0.29", features = ["process", "signal", "term"] }
crossterm = "0.28"
similar = "2.6"
lru = "0.16"
parking_lot = "0.12"
fxhash = "0.2"
dashmap = "6.1"
fs2 = "0.4"

[dev-dependencies]
tempfile = "3.10"
expectrl = "0.8"
assert_cmd = "2.0"
rstest = "0.23"
proptest = "1.5"
nix = { version = "0.29", features = ["process", "signal"] }
predicates = "3.1"
dirs = "5.0"
